--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "simple-admin-firestore",
+  "name": "my-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
-    "body-parser": "^1.20.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "firebase-admin": "^11.11.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
