--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "my-app",
+  "name": "simple-admin-firestore",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.3.1",
+    "firebase-admin": "^11.10.0",
     "jsonwebtoken": "^9.0.0",
-    "firebase-admin": "^11.11.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "body-parser": "^1.20.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
