--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase-admin": "^11.10.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "body-parser": "^1.20.2"
+    "node-fetch": "^3.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
