--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
@@ -13,7 +16,7 @@
     "firebase-admin": "^11.10.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "node-fetch": "^3.4.1"
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
