--- a/package.json
+++ b/package.json
@@ -1,24 +1,19 @@
 {
-  "name": "simple-admin-firestore",
+  "name": "simple-firestore-dashboard",
   "version": "1.0.0",
+  "description": "Homepage + JWT login + dashboard + Firestore + Telegram notifications",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
-  "engines": {
-    "node": "22.x"
+    "start": "node server.js"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "dotenv": "^16.0.3",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "firebase-admin": "^11.10.0",
+    "firebase-admin": "^11.11.0",
     "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.6.7"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
+    "node-fetch": "^3.4.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
