--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "simple-firestore-dashboard",
+  "name": "leaks",
   "version": "1.0.0",
-  "description": "Homepage + JWT login + dashboard + Firestore + Telegram notifications",
+  "description": "Dashboard project with Firebase and Telegram integration",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "firebase": "^10.3.0",
     "firebase-admin": "^11.11.0",
-    "jsonwebtoken": "^9.0.0",
-    "node-fetch": "^3.3.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^2.3.0",
+    "node-fetch": "^3.3.2"
   }
 }
