--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "engines": {
     "node": "24.x"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "firebase": "^10.3.0",
-    "firebase-admin": "^11.11.0",
-    "multer": "^2.3.0",
-    "node-fetch": "^3.3.2"
-  }
+"dependencies": {
+  "express": "^4.18.2",
+  "firebase-admin": "^11.11.0",
+  "firebase": "^10.3.0",
+  "multer": "2.0.2",
+  "node-fetch": "^3.3.2",
+  "jsonwebtoken": "^9.0.0"
+}
 }
