--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "leaks",
+  "name": "my-dashboard-app",
   "version": "1.0.0",
-  "description": "Dashboard project with Firebase and Telegram integration",
   "main": "server.js",
-  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
-  "engines": {
-    "node": "24.x"
-  },
-"dependencies": {
-  "express": "^4.18.2",
-  "firebase-admin": "^11.11.0",
-  "firebase": "^10.3.0",
-  "multer": "2.0.2",
-  "node-fetch": "^3.3.2",
-  "jsonwebtoken": "^9.0.0"
-}
+  "dependencies": {
+    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.0",
+    "firebase-admin": "^11.10.1",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.2"
+  }
 }
